# mcp-pizza

./: .gitignore  README.md  WORKFLOW.md  claude_desktop_config.example.json  pyproject.toml  test_mcp_with_ollama.py
mcpizza/: __init__.py  __main__.py  demo_no_real_api.py  logger.py  server.py
mcpizza/api/: client.py  endpoints.py
mcpizza/models/: params.py
mcpizza/services/: guidance_service.py  order_service.py  payment_service.py  store_service.py
mcpizza/tools/: guidance_tools.py  menu_tools.py  order_tools.py  store_tools.py
mcpizza/utils/: mock_order.py
tests/: test_api_client.py  test_models.py  test_services.py  test_utils.py
