[project]
name = "mcpizza"
version = "0.1.0"
description = "AI-Powered Pizza Ordering with Model Context Protocol"
requires-python = ">=3.10"
dependencies = [
    "pizzapi>=0.0.5",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
